# C610-HelmetDetect-demo

./: README.docx  README.md
HelmetDetect/: CMakeLists.txt  helmet_detect  helmet_detect_0.1.bb
HelmetDetect/examples/helmet/: helmet.cpp
HelmetDetect/gst_pipe/: bufmanager.hpp  gstcamera.hpp  gstlocal.hpp  gstpipe.hpp  gstpipefactory.hpp  gstrtsp.hpp  gsttest.cpp  publicattr.h
HelmetDetect/inference/: common.h  inference.hpp  inferencefactory.hpp
HelmetDetect/inference/snpe/: CMakeLists.txt  snpe_test.cpp
HelmetDetect/inference/snpe/RunSnpe/: snpe_inference.hpp
HelmetDetect/inference/tflite/: CMakeLists.txt  tflite_test.cpp
HelmetDetect/inference/tflite/RunTflite/: result_process.h  result_process_imp.h  tflite_inference.cpp  tflite_inference.h
HelmetDetect/models/helmet/: helmet_tflite.ipynb
HelmetDetect/pb_conf/: aiconf.pb.cc  aiconf.pb.h  aiconf.proto
doc/: QCS610-HelmetDetect-demo-doc.docx
